--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -27,6 +27,6 @@ jobs:
         uses: super-linter/super-linter/slim@v5
         env:
           VALIDATE_ALL_CODEBASE: false
-          FILTER_REGEX_INCLUDE: .*src/.*
+          FILTER_REGEX_INCLUDE: .*src/main/.*
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
